--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta name="twitter:creator" content="dlion92">
     <meta name="twitter:creator:id" content="dlion92">
     <meta name="twitter:image:src" content="{{site.url}}/public/img/pic.jpg">
-    <meta name="twitter:domain" content="{{site.url}}">
+    <meta name="twitter:domain" content="{{site.url}}/">
     <!-- FINE SEO -->
 
     <!-- FOUNDATION -->
@@ -42,7 +42,7 @@
     <nav class="top-bar" data-topbar>
         <ul class="title-area">
             <li class="name">
-                <h1><a href="#"><span>{{site.description_name}}</span> | <span id="titolettoNavbar">{{site.description_blog}}</span></a></h1>
+                <h1><a href="#"><span class="element">{{site.description_name}}</span> | <span id="titolettoNavbar">{{site.description_blog}}</span></a></h1>
             </li>
              <li class="toggle-topbar menu-icon"><a href="#"></a></li>
         </ul>
@@ -50,7 +50,7 @@
             <ul class="right">
                 <li>
                     <a href="{{site.url}}/about">
-                        <span class="title-menutopbar">About</span>
+                        <span class="title-menutopbar element">About</span>
                     </a>
                 </li>
             </ul>
@@ -76,6 +76,15 @@
         </div>
     </div>
 {% endfor %}
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o)
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-40851910-1', 'dlion.it');
+        ga('send', 'pageview');
+    </script>
 
     <script src="public/js/vendor/jquery.js"></script>
     <script src="public/js/foundation.min.js"></script>
