Desktop footer finished

--- a/index.html
+++ b/index.html
@@ -92,7 +92,14 @@
     <div class="footer">
         <div class="row">
             <div class="large-6 columns">
-                Prova
+                <div class="row">
+                    <div class="large-3 columns picFooter">
+                        <img src="{{site.url}}/public/img/pic.jpg" width="90px"></img>
+                    </div>
+                    <div class="large-7 columns left aboutFooter">
+                        <p>Geek, developer,compulsive coder and curious coffee addicted.<br>Italian guy and Computer Science student.</p>
+                    </div>
+                </div>
             </div>
             <div class="large-6 columns iconsFooter">
                 <a href="https://github.com/DLion" target="_blank">
@@ -115,6 +122,9 @@
                 </a>
                 <a href="http://stackoverflow.com/users/1633187/domenico-leone-luciani" target="_blank">
                     <i class="fi-social-stack-overflow"></i>
+                </a>
+                <a href="{{site.url}}/feed/" target="_blank">
+                    <i class="fi-rss"></i>
                 </a>
                 <a href="mailto:domenicoleoneluciani@gmail.com">
                     <i class="fi-mail"></i>
