Home first try finished

--- a/index.html
+++ b/index.html
@@ -101,34 +101,54 @@
                     </div>
                 </div>
             </div>
-            <div class="large-6 columns iconsFooter">
-                <a href="https://github.com/DLion" target="_blank">
-                    <i class="fi-social-github"></i>
-                </a>
-                <a href="https://twitter.com/dlion92" target="_blank">
-                    <i class="fi-social-twitter"></i>
-                </a>
-                <a href="https://linkedin.com/in/dlion/" target="_blank">
-                    <i class="fi-social-linkedin"></i>
-                </a>
-                <a href="https://facebook.com/dlion.smagen/" target="_blank">
-                    <i class="fi-social-facebook"></i>
-                </a>
-                <a href="https://plus.google.com/u/0/+DomenicoLeoneLuciani" target="_blank">
-                    <i class="fi-social-google-plus"></i>
-                </a>
-                <a href="skype:dlion92">
-                    <i class="fi-social-skype"></i>
-                </a>
-                <a href="http://stackoverflow.com/users/1633187/domenico-leone-luciani" target="_blank">
-                    <i class="fi-social-stack-overflow"></i>
-                </a>
-                <a href="{{site.url}}/feed/" target="_blank">
-                    <i class="fi-rss"></i>
-                </a>
-                <a href="mailto:domenicoleoneluciani@gmail.com">
-                    <i class="fi-mail"></i>
-                </a>
+            <div class="large-6 columns  iconsFooter">
+                <ul class="small-block-grid-1 large-block-grid-9">
+                    <li>
+                        <a href="https://github.com/DLion" target="_blank">
+                            <i class="fi-social-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/dlion92" target="_blank">
+                            <i class="fi-social-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com/in/dlion/" target="_blank">
+                            <i class="fi-social-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://facebook.com/dlion.smagen/" target="_blank">
+                            <i class="fi-social-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://plus.google.com/u/0/+DomenicoLeoneLuciani" target="_blank">
+                            <i class="fi-social-google-plus"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="skype:dlion92">
+                            <i class="fi-social-skype"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://stackoverflow.com/users/1633187/domenico-leone-luciani" target="_blank">
+                            <i class="fi-social-stack-overflow"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{site.url}}/feed/" target="_blank">
+                            <i class="fi-rss"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:domenicoleoneluciani@gmail.com">
+                            <i class="fi-mail"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
