--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
                         <span class="title-menutopbar element">Github</span>
                     </a>
                 </li>
-        </div>
-    </div>
+            </ul>
+        </section>
+    </nav>
 {% for post in site.posts %}
     <div class="row text-center primoPiano">
         <div class="large-2 columns large-text-right dataPrimoPiano">
