--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
             </ul>
         </section>
     </nav>
+    <div class="container">
+        <div class="row text-center titolone">
+            <div class="large-5 large-offset-1 columns" >
+                <h1 id="titoloNome"><a href="{{site.url}}/">{{site.description_name}}</a></h1>
+            </div>
+            <div class="large-6 large-centered columns" >
+                <h1 id="titoloDescr" class="large-text-left">{{site.description_blog}}</h1>
+            </div>
+        </div>
+    </div>
 {% for post in site.posts %}
     <div class="row text-center primoPiano">
         <div class="large-2 columns large-text-right dataPrimoPiano">
