--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                         <span class="title-menutopbar element">Github</span>
                     </a>
                 </li>
+                <li>
+                    <a href="https://twitter.com/dlion92" target="_blank">
+                        <span class="title-menutopbar element">Twitter</span>
+                    </a>
+                </li>
             </ul>
         </section>
     </nav>
