--- a/feed/index.html
+++ b/feed/index.html
@@ -1,14 +1,13 @@
 ---
-layout: nil
 ---
 <?xml version="1.0" encoding="UTF-8"?>
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
 	<channel>
-		<title>{{ site.name | xml_escape }}</title>
-		<description>{{ site.description | xml_escape }}</description>
+		<title>{{ site.name }}</title>
+		<description>{{ site.description_name }} | {{ site.description_blog }}</description>
 		<link>{{ site.url }}</link>
 		<atom:link href="{{ site.url }}/feed.xml" rel="self" type="application/rss+xml" />
-		{% for post in site.posts limit:10 %}
+		{% for post in site.posts %}
 			<item>
 				<title>{{ post.title | xml_escape }}</title>
 				<description>{{ post.content | xml_escape }}</description>
