--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
 <!--Footer TODO: Da rivedere  -->
     <div class="footer">
         <div class="row">
-            <div class="large-6 columns">
+            <div class="large-6  columns">
                 <div class="row">
-                    <div class="large-3 columns picFooter">
+                    <div class="large-3 medium-2 columns picFooter">
                         <img src="{{site.url}}/public/img/pic.jpg" width="90px"></img>
                     </div>
-                    <div class="large-7 columns left aboutFooter">
+                    <div class="large-7 medium-10 columns left aboutFooter">
                         <p>Geek, developer,compulsive coder and curious coffee addicted.<br>Italian guy and Computer Science student.</p>
                     </div>
                 </div>
             </div>
             <div class="large-6 columns  iconsFooter">
-                <ul class="small-block-grid-1 large-block-grid-9">
+                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-9">
                     <li>
                         <a href="https://github.com/DLion" target="_blank">
                             <i class="fi-social-github"></i>
