--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>{{site.description_name}} | {{site.description_blog}}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="author" href="https://plus.google.com/+DomenicoLeoneLuciani/posts"/>
+    <link rel="author" href="https://plus.google.com/{{site.gplus}}/posts"/>
     <!-- SEO -->
     <link rel="canonical" href="{{site.url}}/" />
     <!-- Schema.org markup for Google+ -->
@@ -23,11 +23,11 @@
     <meta property="og:image" content="{{site.url}}/public/img/pic.jpg" />
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="summary">
-    <meta name="twitter:site" content="dlion92">
+    <meta name="twitter:site" content="{{site.twitter}}">
     <meta name="twitter:title" content="{{site.description_name}} | {{site.description_blog}}">
     <meta name="twitter:description" content="Domenico Luciani's Blog">
-    <meta name="twitter:creator" content="dlion92">
-    <meta name="twitter:creator:id" content="dlion92">
+    <meta name="twitter:creator" content="{{site.twitter}}">
+    <meta name="twitter:creator:id" content="{{site.twitter}}">
     <meta name="twitter:image:src" content="{{site.url}}/public/img/pic.jpg">
     <meta name="twitter:domain" content="{{site.url}}/">
     <!-- FINE SEO -->
@@ -50,12 +50,12 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li>
-                    <a href="https://github.com/DLion" target="_blank">
+                    <a href="https://github.com/{{site.github}}" target="_blank">
                         <span class="title-menutopbar element">Github</span>
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/dlion92" target="_blank">
+                    <a href="https://twitter.com/{{site.twitter}}" target="_blank">
                         <span class="title-menutopbar element">Twitter</span>
                     </a>
                 </li>
@@ -99,22 +99,22 @@
             <div class="large-6 columns  iconsFooter">
                 <ul class="small-block-grid-5 medium-block-grid-5 large-block-grid-5">
                     <li>
-                        <a href="https://github.com/DLion" target="_blank">
+                        <a href="https://github.com/{{site.github}}" target="_blank">
                             <i class="fi-social-github"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/dlion92" target="_blank">
+                        <a href="https://twitter.com/{{site.twitter}}" target="_blank">
                             <i class="fi-social-twitter"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://linkedin.com/in/dlion/" target="_blank">
+                        <a href="https://linkedin.com/in/{{site.linkedin}}/" target="_blank">
                             <i class="fi-social-linkedin"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/u/0/+DomenicoLeoneLuciani" target="_blank">
+                        <a href="https://plus.google.com/u/0/{{site.gplus}}" target="_blank">
                             <i class="fi-social-google-plus"></i>
                         </a>
                     </li>
