--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>{{site.description_name}} | {{site.description_blog}}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="author" href="https://plus.google.com/{{site.gplus}}/posts"/>
+    <meta name="description" content="{{site.description_name}} |  {{site.description_blog}}"/>
+    <meta name="keywords" content="programming, security, raspberry, computer vision, dlion, blog"/>
+
+    <link rel="author" href="https://plus.google.com/{{site.gplus}}"/>
+    <link rel="publisher" href="https://plus.google.com/{{site.gplus}}"/>
     <!-- SEO -->
     <link rel="canonical" href="{{site.url}}/" />
     <!-- Schema.org markup for Google+ -->
@@ -28,6 +32,7 @@
     <meta name="twitter:description" content="Domenico Luciani's Blog">
     <meta name="twitter:creator" content="{{site.twitter}}">
     <meta name="twitter:creator:id" content="{{site.twitter}}">
+    <meta name="twitter:image" content="{{site.url}}/public/img/pic.jpg">
     <meta name="twitter:image:src" content="{{site.url}}/public/img/pic.jpg">
     <meta name="twitter:domain" content="{{site.url}}/">
     <!-- FINE SEO -->
