robots and google

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="{{site.description_name}} |  {{site.description_blog}}"/>
     <meta name="keywords" content="programming, security, raspberry, computer vision, dlion, blog"/>
 
-    <link rel="author" href="https://plus.google.com/{{site.gplus}}"/>
-    <link rel="publisher" href="https://plus.google.com/{{site.gplus}}"/>
+    <link href="https://plus.google.com/{{site.gplus}}?rel=author"/>
+    <link href="https://plus.google.com/{{site.gplus}}?rel=publisher"/>
     <!-- SEO -->
     <link rel="canonical" href="{{site.url}}/" />
     <!-- Schema.org markup for Google+ -->
