--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/public/css/custom.css" />
     <link rel="stylesheet" href="/public/foundation-icons/foundation-icons.css" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.description_name }}" href="{{ site.url }}/feed/feed.xml">
+    <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
+
     <script src="/public/js/vendor/modernizr.js"></script>
 </head>
 <body>
