--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
 
     <script src="/public/js/vendor/modernizr.js"></script>
+    <script src="/public/js/cookies-enabler.min.js"></script>
 </head>
 <body>
     <nav class="top-bar" data-topbar>
@@ -135,7 +136,8 @@
             </div>
         </div>
     </div>
-    <script>
+    
+    <script type="text/plain" class="ce-script">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o)
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -146,8 +148,9 @@
 
     <script src="public/js/vendor/jquery.js"></script>
     <script src="public/js/foundation.min.js"></script>
-    <script>
+    <script type="text/javascript">
         $(document).foundation();
+        COOKIES_ENABLER.init();
     </script>
 </body>
 </html>
