--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <link href="https://plus.google.com/{{site.gplus}}?rel=author"/>
     <link href="https://plus.google.com/{{site.gplus}}?rel=publisher"/>
     <!-- SEO -->
-    <link rel="canonical" href="{{site.url}}/" />
+    <link rel="canonical" href="/" />
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="{{site.description_name}} | {{site.description_blog}}">
     <meta itemprop="description" content="Domenico Luciani's Blog">
-    <meta itemprop="image" content="{{site.url}}/public/img/pic.jpg">
+    <meta itemprop="image" content="/public/img/pic.jpg">
     <!-- Open Graph data -->
     <meta property="og:locale" content="it_IT" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{site.description_name}} | {{site.description_blog}}" />
     <meta property="og:description" content="Domenico Luciani's Blog" />
-    <meta property="og:url" content="{{site.url}}/" />
+    <meta property="og:url" content="/" />
     <meta property="og:site_name" content="{{site.description_name}} | {{site.description_blog}}" />
-    <meta property="og:image" content="{{site.url}}/public/img/pic.jpg" />
+    <meta property="og:image" content="/public/img/pic.jpg" />
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="summary">
     <meta name="twitter:site" content="{{site.twitter}}">
@@ -35,13 +35,13 @@
     <meta name="twitter:creator" content="{{site.twitter}}">
     <meta name="twitter:creator:id" content="{{site.twitter}}">
     <meta name="twitter:image" content="{{site.url}}/public/img/pic.jpg">
-    <meta name="twitter:image:src" content="{{site.url}}/public/img/pic.jpg">
-    <meta name="twitter:domain" content="{{site.url}}/">
+    <meta name="twitter:image:src" content="/public/img/pic.jpg">
+    <meta name="twitter:domain" content="/">
     <!-- FINE SEO -->
 
     <!-- FOUNDATION -->
     <link rel="stylesheet" href="/public/css/foundation.min.css" />
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
+    <link href='fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/public/css/custom.css" />
     <link rel="stylesheet" href="/public/foundation-icons/foundation-icons.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.description_name }} | {{ site.description_blog }}" href="{{ site.url }}/feed/">
