--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- FOUNDATION -->
     <link rel="stylesheet" href="/public/css/foundation.min.css" />
-    <link href='fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/public/css/custom.css" />
     <link rel="stylesheet" href="/public/foundation-icons/foundation-icons.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.description_name }} | {{ site.description_blog }}" href="{{ site.url }}/feed/">
