--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="{{site.description_name}} | {{site.description_blog}}">
     <meta itemprop="description" content="Domenico Luciani's Blog">
-    <meta itemprop="image" content="/public/img/pic.jpg">
+    <meta itemprop="image" content="//dlion.it/public/img/pic.jpg">
     <!-- Open Graph data -->
     <meta property="og:locale" content="it_IT" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{site.description_name}} | {{site.description_blog}}" />
     <meta property="og:description" content="Domenico Luciani's Blog" />
-    <meta property="og:url" content="/" />
+    <meta property="og:url" content="//dlion.it" />
     <meta property="og:site_name" content="{{site.description_name}} | {{site.description_blog}}" />
-    <meta property="og:image" content="/public/img/pic.jpg" />
+    <meta property="og:image" content="//dlion.it/public/img/pic.jpg" />
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="summary">
     <meta name="twitter:site" content="{{site.twitter}}">
@@ -34,9 +34,9 @@
     <meta name="twitter:description" content="Domenico Luciani's Blog">
     <meta name="twitter:creator" content="{{site.twitter}}">
     <meta name="twitter:creator:id" content="{{site.twitter}}">
-    <meta name="twitter:image" content="{{site.url}}/public/img/pic.jpg">
-    <meta name="twitter:image:src" content="/public/img/pic.jpg">
-    <meta name="twitter:domain" content="/">
+    <meta name="twitter:image" content="//dlion.it/public/img/pic.jpg">
+    <meta name="twitter:image:src" content="//dlion.it/public/img/pic.jpg">
+    <meta name="twitter:domain" content="//dlion.it">
     <!-- FINE SEO -->
 
     <!-- FOUNDATION -->
@@ -44,8 +44,8 @@
     <link href='//fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/public/css/custom.css" />
     <link rel="stylesheet" href="/public/foundation-icons/foundation-icons.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.description_name }} | {{ site.description_blog }}" href="{{ site.url }}/feed/">
-    <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.description_name }} | {{ site.description_blog }}" href="//dlion.it/feed/">
+    <link rel="shortcut icon" href="//dlion.it/favicon.ico">
 
     <script src="/public/js/vendor/modernizr.js"></script>
     <script src="/public/js/cookies-enabler.min.js"></script>
@@ -80,7 +80,7 @@
     <nav class="top-bar" data-topbar>
         <ul class="title-area">
             <li class="name">
-                <h1><a href="{{site.url}}"><span class="element">{{site.description_name}}</span> | <span id="titolettoNavbar">{{site.description_blog}}</span></a></h1>
+                <h1><a href="//dlion.it"><span class="element">{{site.description_name}}</span> | <span id="titolettoNavbar">{{site.description_blog}}</span></a></h1>
             </li>
              <li class="toggle-topbar menu-icon"><a href="#"></a></li>
         </ul>
@@ -102,7 +102,7 @@
     <div class="container">
         <div class="row text-center titolone">
             <div class="large-5 large-offset-1 columns" >
-                <h1 id="titoloNome"><a href="{{site.url}}/">{{site.description_name}}</a></h1>
+                <h1 id="titoloNome"><a href="//dlion.it/">{{site.description_name}}</a></h1>
             </div>
             <div class="large-6 large-centered columns" >
                 <h1 id="titoloDescr" class="large-text-left">{{site.description_blog}}</h1>
@@ -126,7 +126,7 @@
             <div class="large-6  columns">
                 <div class="row">
                     <div class="large-3 medium-2 columns picFooter">
-                        <img src="{{site.url}}/public/img/pic.jpg" width="90px"></img>
+                        <img src="//dlion.it/public/img/pic.jpg" width="90px"></img>
                     </div>
                     <div class="large-7 medium-10 columns left aboutFooter">
                         <p>Geek, developer,compulsive coder and curious coffee addicted.<br>Italian guy and Computer Science student.</p>
